--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,15 +11,27 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {M.S. in Computer Science and Infomation Engineering} % Degree
+    {National Cheng Kung University} % Institution
+    {Tainan, Taiwan} % Location
+    {Sept. 2019 - Aug. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Distributed System Lab, Institute of Computer Science and Information Engineering (Thesis advisor: Prof. Hung-Chang Hsiao), GPA: 4.12/4.3}
       \end{cvitems}
     }
+
+%---------------------------------------------------------
+  \cventry
+    {B.S. in Computer Science and Infomation Engineering} % Degree
+    {Tamkung University} % Institution
+    {New Taipei, Taiwan} % Location
+    {Sept. 2012 - Jun. 2016} % Date(s)
+    % {
+    %   \begin{cvitems} % Description(s) bullet points
+    %     \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSIE Dept.}
+    %   \end{cvitems}
+    % }
 
 %---------------------------------------------------------
 \end{cventries}
