--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Site Reliability Engineer at start-up company Kasa. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Current Cloud Software Engineer at Chunghwa Telecom and Committer at Apache Software Foundation. Have 3+ years experience specializing in web development, cloud computing and open source technology. I love learning something new and keen on contributing to open-source softwares. Interested in big data, distributed systems, machine learning and MLOps.
 \end{cvparagraph}
