--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -27,11 +27,11 @@
     {Tamkung University} % Institution
     {New Taipei, Taiwan} % Location
     {Sept. 2012 - Jun. 2016} % Date(s)
-    % {
-    %   \begin{cvitems} % Description(s) bullet points
-    %     \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSIE Dept.}
-    %   \end{cvitems}
-    % }
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
 \end{cventries}
