--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -32,7 +32,7 @@
   \cventry
     {Committer} % Job title
     {Apache Software Foundation, Submarine} % Organization
-    {Global} % Location
+    {Taipei, Taiwan} % Location
     {Oct. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
