--- a/examples/resume/presentation.tex
+++ b/examples/resume/presentation.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s)
         \item {Introduced to MLOps and the difference between DevOps}
-        \item {Introduced to Apache Submarine which is a cloud-native machine learning platform allows engineers and data scientists to run machine learning and deep learning workloads in a distributed cluster.}
+        \item {Introduced to Apache Submarine which is a cloud-native Machine Learning platform allows data scientists to run Machine Learning and Deep Learning workloads in distributed environment.}
       \end{cvitems}
     }
 %---------------------------------------------------------
