--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Cloud Software Engineer at Chunghwa Telecom and Committer at Apache Software Foundation. Have 3+ years experience specializing in web development, cloud computing and open source technology. I love learning something new and keen on contributing to open-source softwares. Interested in big data, distributed systems, machine learning and MLOps.
+Current Cloud Software Engineer at Chunghwa Telecom and Committer at Apache Software Foundation. Have 3+ years experience specializing in web development, cloud computing and open-source technology. I love learning something new and keen on contributing to open-source softwares. Interested in Big Data, Cloud Computing, Distributed Systems, Machine Learning and MLOps.
 \end{cvparagraph}
