--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -17,7 +17,7 @@
     {Sept. 2019 - Aug. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Distributed System Lab, Institute of Computer Science and Information Engineering (Thesis advisor: Prof. Hung-Chang Hsiao), GPA: 4.12/4.3}
+        \item {Distributed System Lab, Thesis advisor: Prof. Hung-Chang Hsiao, GPA: 4.12/4.3}
       \end{cvitems}
     }
 
@@ -29,7 +29,7 @@
     {Sept. 2012 - Jun. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {}
+        \item {Senior project: A trip planning, recording APP based on Android, Advisor: Prof. Chien-Chang Chen}
       \end{cvitems}
     }
 
