--- a/examples/resume/presentation.tex
+++ b/examples/resume/presentation.tex
@@ -17,7 +17,7 @@
     {Aug. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced to MLOps and the difference between DevOps}
+        \item {Introduced to MLOps and the difference between DevOps.}
         \item {Introduced to Apache Submarine which is a cloud-native Machine Learning platform allows data scientists to run Machine Learning and Deep Learning workloads in distributed environment.}
       \end{cvitems}
     }
