--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -24,12 +24,12 @@
 %---------------------------------------------------------
   \cventry
     {B.S. in Computer Science and Infomation Engineering} % Degree
-    {Tamkung University} % Institution
+    {Tamkamg University} % Institution
     {New Taipei, Taiwan} % Location
     {Sept. 2012 - Jun. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Senior project: A trip planning, recording APP based on Android, Advisor: Prof. Chien-Chang Chen}
+        \item {Senior project: A trip planning Android APP, Advisor: Prof. Chien-Chang Chen}
       \end{cvitems}
     }
 
