--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,8 +17,8 @@
     {Sept. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Design several reusable RESTful APIs integrated with Google client API in Golang}
-        \item {Developed an module in IDC CMS using JSP, Java Spring, Hibernate, Microsoft SQL server}
+        \item {Designing several reusable RESTful APIs integrated with Google (Reseller, Directory) API in Golang.}
+        \item {Developing a web application(IDC CMS) using JSP, Java Spring, Hibernate, Microsoft SQL server.}
         % \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
         % \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
         % \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
@@ -36,9 +36,9 @@
     {Oct. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Enabling Submarine to run distributed MXNet jobs on Hadoop YARN}
-        \item {Integrating Jupyter notebook into Submarine allows users to manage notebook instances via Submarine Notebook UI / RESTful APIs.}
-        \item {Deploying Traefik ingress controller onto Submarine K8s cluster to manage external access to the services in a cluster.}
+        \item {Enable Submarine to run distributed MXNet jobs on Hadoop YARN.}
+        \item {Integrate Jupyter notebook into Submarine allows users to manage notebook instances via Submarine Notebook RESTful APIs.}
+        \item {Deployed Traefik ingress controller on Submarine K8s cluster to manage external access to the services.}
         % \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
         % \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
         % \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
@@ -53,10 +53,9 @@
     {Jun. 2018 - Oct. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Worked at the engineering team and developed an online store platform called “Anzoo”}
-        \item {Developed an online store platform in PHP (yii framwork)}
-        \item {Designed database schema (MariaDB) and RESTful APIs}
-        \item {Focused on back-end technologies}
+        \item {Worked at the engineering team.}
+        \item {Developed an online store platform called “Anzoo” using Yii PHP framwork, Vanilla JS and jQuery.}
+        \item {Designed database schema (MariaDB) and RESTful APIs.}
         % \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
         % \item {Implemented a distributed web stress test tool with high anonymity.}
         % \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
@@ -71,11 +70,11 @@
     {Jul. 2016 - May. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Worked at the web development team and developed a matchmaking web application called “Party Party”}
-        \item {Collaborated with project manager and web designer to develop website using Vanilla JS, jQuery, Ajax, and Bootstrap}
-        \item {Migrated codebase from Yii PHP framework to pure PHP}
-        \item {Migrated data from PostgreSQL to MySQL}
-        \item {Used E.SUN BANK cash management service (e-Collection) to receive payments}
+        \item {Worked at the web development team.}
+        \item {Developed a matchmaking web application called “Party Party” using Vanilla JS, jQuery, AJAX and Bootstrap.}
+        \item {Migrated codebase from Yii PHP framework to pure PHP.}
+        \item {Migrated data from PostgreSQL to MySQL.}
+        \item {Used E.SUN BANK cash management service (e-Collection) to receive payments.}
         % \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
         % \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
         % \item {Won the 2nd prize in final evaluation.}
