--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {M.S. in Computer Science and Infomation Engineering} % Degree
+    {M.S. in Computer Science and Information Engineering} % Degree
     {National Cheng Kung University} % Institution
     {Tainan, Taiwan} % Location
     {Sept. 2019 - Aug. 2021} % Date(s)
@@ -23,13 +23,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Infomation Engineering} % Degree
-    {Tamkamg University} % Institution
+    {B.S. in Computer Science and Information Engineering} % Degree
+    {Tamkang University} % Institution
     {New Taipei, Taiwan} % Location
     {Sept. 2012 - Jun. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Senior project: A trip planning Android APP, Advisor: Prof. Chien-Chang Chen}
+        \item {Senior project: A trip planning APP, Advisor: Prof. Chien-Chang Chen}
       \end{cvitems}
     }
 
