--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -36,8 +36,8 @@
     {Oct. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Enable Submarine to run distributed MXNet jobs on Hadoop YARN.}
-        \item {Integrate Jupyter notebook into Submarine allows users to manage notebook instances via Submarine Notebook RESTful APIs.}
+        \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN.}
+        \item {Integrated Jupyter notebook into Submarine allows users to manage notebook instances via Submarine Notebook RESTful APIs.}
         \item {Deployed Traefik ingress controller on Submarine K8s cluster to manage external access to the services.}
         % \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
         % \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
