--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,8 +17,8 @@
     {Sept. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designing several reusable RESTful APIs integrated with Google (Reseller, Directory) API in Golang.}
-        \item {Developing a web application(IDC CMS) using JSP, Java Spring, Hibernate, Microsoft SQL server.}
+        \item {Designing several reusable RESTful APIs integrated with Google APIs in Golang.}
+        \item {Developing a web application(IDC CMS) using Java, Hibernate and Microsoft SQL server.}
         % \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
         % \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
         % \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
@@ -71,7 +71,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Worked at the web development team.}
-        \item {Developed a matchmaking web application called “Party Party” using Vanilla JS, jQuery, AJAX and Bootstrap.}
+        \item {Developed a matchmaking web application called “Party Party” using PHP, Vanilla JS, jQuery, AJAX and Bootstrap.}
         \item {Migrated codebase from Yii PHP framework to pure PHP.}
         \item {Migrated data from PostgreSQL to MySQL.}
         \item {Used E.SUN BANK cash management service (e-Collection) to receive payments.}
