--- a/examples/resume/presentation.tex
+++ b/examples/resume/presentation.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s)
         \item {Introduced to MLOps and the difference between DevOps.}
-        \item {Introduced to Apache Submarine which is a cloud-native Machine Learning platform allows data scientists to run Machine Learning and Deep Learning workloads in distributed environment.}
+        \item {Introduced to Apache Submarine which is a cloud-native Machine Learning platform makes data scientists focus on models and run ML workloads easily in distributed environment.}
       \end{cvitems}
     }
 %---------------------------------------------------------
