update experience and summary

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,8 +17,8 @@
     {Sept. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designing several reusable RESTful APIs integrated with Google APIs in Golang.}
-        \item {Developing a web application(IDC CMS) using Java, Hibernate and Microsoft SQL server.}
+        \item {Designing RESTful APIs integrated with Google APIs in Go for reselling Google Workspace.}
+        \item {Developing a web application using Java, JSP, Hibernate and Microsoft SQL server.}
         % \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
         % \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
         % \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
@@ -36,9 +36,10 @@
     {Oct. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN.}
-        \item {Integrated Jupyter notebook into Submarine allows users to manage notebook instances via Submarine Notebook RESTful APIs.}
+        \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN via an open-source project called TonY.}
+        \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their onw notebook instances via RESTful APIs.}
         \item {Deployed Traefik ingress controller on Submarine K8s cluster to manage external access to the services.}
+        \item {Analyzed the demand of data scientists on Machine Learning pipelines.}
         % \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
         % \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
         % \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
@@ -53,8 +54,8 @@
     {Jun. 2018 - Oct. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Worked at the engineering team.}
-        \item {Developed an online store platform called “Anzoo” using Yii PHP framwork, Vanilla JS and jQuery.}
+        \item {Developed an online store platform using Yii PHP framwork, Vanilla JS, jQuery and Bootstrap.}
+        \item {Implemented factory design pattern for rendering inconcrete view objects.}
         \item {Designed database schema (MariaDB) and RESTful APIs.}
         % \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
         % \item {Implemented a distributed web stress test tool with high anonymity.}
@@ -70,11 +71,11 @@
     {Jul. 2016 - May. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Worked at the web development team.}
-        \item {Developed a matchmaking web application called “Party Party” using PHP, Vanilla JS, jQuery, AJAX and Bootstrap.}
+        \item {Developed a matchmaking web application using PHP, Vanilla JS, jQuery and Bootstrap.}
+        \item {Integrated E.SUN BANK cash management service (e-Collection) to receive payments.}
+        \item {Integrated Google Calendar, URL shorten API and Facebook Graph API for member registration.}
         \item {Migrated codebase from Yii PHP framework to pure PHP.}
         \item {Migrated data from PostgreSQL to MySQL.}
-        \item {Used E.SUN BANK cash management service (e-Collection) to receive payments.}
         % \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
         % \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
         % \item {Won the 2nd prize in final evaluation.}
