--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Cloud Software Engineer at Chunghwa Telecom and Committer at Apache Software Foundation. Have 3+ years experience specializing in web development and open-source technology. I love learning something new and keen on contributing to open-source softwares. Interested in Big Data, Distributed Systems, Machine Learning and MLOps. Right now, I am learning about Java, Go, Spark and Kubernetes ecosystem.
+Current software engineer at Chunghwa Telecom and committer at Apache Software Foundation. Have 3+ years experience specializing in web development and open-source technology. I love learning something new and keen on contributing to open-source softwares. Interested in Big Data, Distributed Systems, Machine Learning and MLOps. Right now, I am learning about Java, Go, docker, Kubernetes ecosystem and ML systems.
 \end{cvparagraph}
