--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Cloud Software Engineer} % Job title
+    {Software Engineer} % Job title
     {Chunghwa Telecom Co., Ltd.} % Organization
     {Taipei, Taiwan} % Location
     {Sept. 2021 - Present} % Date(s)
@@ -54,8 +54,8 @@
     {Jun. 2018 - Oct. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed an online store platform using Yii PHP framwork, Vanilla JS, jQuery and Bootstrap.}
-        \item {Implemented factory design pattern for rendering inconcrete view objects.}
+        \item {Developed an online store platform using PHP MVC framwork (Yii), Vanilla JS, jQuery and Bootstrap.}
+        \item {Implemented factory method pattern for creating widgets which rendering inconcrete view objects.}
         \item {Designed database schema (MariaDB) and RESTful APIs.}
         % \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
         % \item {Implemented a distributed web stress test tool with high anonymity.}
