--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -37,8 +37,8 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN via an open-source project called TonY.}
-        \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their onw notebook instances via RESTful APIs.}
-        \item {Deployed Traefik ingress controller on Submarine K8s cluster to manage external access to the services.}
+        \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their own notebook instances via RESTful APIs.}
+        \item {Deployed Traefik ingress controller on K8s cluster to manage external access to the services in Submarine.}
         \item {Analyzed the demand of data scientists on Machine Learning pipelines.}
         % \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
         % \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
@@ -54,7 +54,7 @@
     {Jun. 2018 - Oct. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed an online store platform using PHP MVC framwork (Yii), Vanilla JS, jQuery and Bootstrap.}
+        \item {Developed an online store platform using PHP MVC framework (Yii), Vanilla JS, jQuery and Bootstrap.}
         \item {Implemented factory method pattern for creating widgets which rendering inconcrete view objects.}
         \item {Designed database schema (MariaDB) and RESTful APIs.}
         % \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
@@ -73,7 +73,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Developed a matchmaking web application using PHP, Vanilla JS, jQuery and Bootstrap.}
         \item {Integrated E.SUN BANK cash management service (e-Collection) to receive payments.}
-        \item {Integrated Google Calendar, URL shorten API and Facebook Graph API for member registration.}
+        \item {Integrated Google Calendar, URL shorten API and Facebook Graph API for activity sign-up and member registration.}
         \item {Migrated codebase from Yii PHP framework to pure PHP.}
         \item {Migrated data from PostgreSQL to MySQL.}
         % \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
