--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,13 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {M.S. in Computer Science and Information Engineering} % Degree
+    {National Cheng Kung University} % Institution
+    {Tainan, Taiwan} % Location
+    {Sept. 2019 - Aug. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Distributed System Lab, Thesis advisor: Prof. Hung-Chang Hsiao, GPA: 3.88/4.0}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {B.S. in Computer Science and Information Engineering} % Degree
+    {Tamkang University} % Institution
+    {New Taipei, Taiwan} % Location
+    {Sept. 2012 - Jun. 2016} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Senior project: A trip planning APP, Advisor: Prof. Chien-Chang Chen}
       \end{cvitems}
     }
 
