--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,27 +12,27 @@
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
+    {Github, Docker, Kubernetes, Helm, Argo, Vagrant, Ansible} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
+    {Jersery, MyBatis, Spring boot, RESTful API, RDBMS} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
+    {HTML5, jQuery, AJAX, Bootstrap} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {JAVA, Go, SQL, JavaScript, PHP} % Skills
 
 %---------------------------------------------------------
-  \cvskill
-    {Languages} % Category
-    {Korean, English, Japanese} % Skills
+  %\cvskill
+  %  {Languages} % Category
+  %  {Korean, English, Japanese} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
