--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designing RESTful APIs integrated with Google APIs in Go for reselling Google Workspace.}
-        \item {Developing a web application(CMS) using Java.}
+        \item {Developing a web application(CMS) using Java, JSP, MSSQL server.}
         \item {Working on introducing IT automation tool like Ansible to reduce repetitive tasks for operators.}
         % \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
         % \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
