--- a/examples/cv/presentation.tex
+++ b/examples/cv/presentation.tex
@@ -11,40 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <Hosting Web Application for Free utilizing GitHub, Netlify and CloudFlare>} % Role
-    {DevFest Seoul by Google Developer Group Korea} % Event
-    {Seoul, S.Korea} % Location
-    {Nov. 2017} % Date(s)
+    {Presenter for <Introduction to Apache Submarine>} % Role
+    {Conference for Open Source Coders, Users and Promoters, COSCUP} % Event
+    {Online} % Location
+    {Aug. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced the history of web technology and the JAM stack which is for the modern web application development.}
-        \item {Introduced how to freely host the web application with high performance utilizing global CDN services.}
+        \item {Introduced to MLOps and the difference between DevOps.}
+        \item {Introduced to Apache Submarine which is a cloud-native ML platform makes data scientists focus on models and run ML workloads easily in distributed environment.}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Presenter for <Metasploit 101>} % Role
-    {6th Hacking Camp - S.Korea} % Event
-    {S.Korea} % Location
-    {Sep. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Introduced basic procedure for penetration testing and how to use Metasploit}
-      \end{cvitems}
-    }
-
 %---------------------------------------------------------
 \end{cventries}
