--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -27,7 +27,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {JAVA, Go, SQL, JavaScript, PHP} % Skills
+    {Java, Go, SQL, JavaScript, PHP} % Skills
 
 %---------------------------------------------------------
   %\cvskill
