add projects section

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -99,11 +99,8 @@
 \input{cv/education.tex}
 \input{cv/skills.tex}
 \input{cv/experience.tex}
-%\input{cv/extracurricular.tex}
-%\input{cv/honors.tex}
+\input{cv/projects.tex}
 \input{cv/presentation.tex}
-%\input{cv/writing.tex}
-%\input{cv/committees.tex}
 
 
 %-------------------------------------------------------------------------------
