--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+\cvsection{Professional Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -28,25 +28,6 @@
         % \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Committer} % Job title
-    {Apache Software Foundation, Submarine} % Organization
-    {Taipei, Taiwan} % Location
-    {Oct. 2020 - Present} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN via an open-source project called TonY.}
-        \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their own notebook instances via RESTful APIs.}
-        \item {Deployed Traefik ingress controller on K8s cluster to manage external access to the services in Submarine.}
-        \item {Analyzed the demand of data scientists on Machine Learning pipelines.}
-        % \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        % \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        % \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
-      \end{cvitems}
-    }
-
 %---------------------------------------------------------
   \cventry
     {Software Engineer} % Job title
