update several files

--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -11,6 +11,17 @@
 
 %---------------------------------------------------------
   \cventry
+    {Contributor} % Job title
+    {Apache Software Foundation, YuniKorn} % Organization
+    {} % Location
+    {Dec. 2021 - Present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {YuniKorn is a standalone resource scheduler for K8s, that empowers to run large-scale batch jobs and services on a multi-tenancy K8s cluster. I added e2e test for admission controller to increase test coverage. Now I am working on some issues about improving the stability for YuniKorn scheduler.}
+      \end{cvitems}
+    }
+%---------------------------------------------------------
+  \cventry
     {Committer} % Job title
     {Apache Software Foundation, Submarine} % Organization
     {} % Location
@@ -21,9 +32,6 @@
         \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their own notebook instances via RESTful APIs.}
         \item {Deployed Traefik ingress controller on K8s cluster to manage external access to the services in Submarine.}
         \item {Analyzed the demand of data scientists on Machine Learning pipelines.}
-        % \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        % \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        % \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
       \end{cvitems}
     }
 %---------------------------------------------------------
