--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -30,9 +30,9 @@
     {Java, Go, SQL, JavaScript, PHP} % Skills
 
 %---------------------------------------------------------
-  %\cvskill
-  %  {Languages} % Category
-  %  {Korean, English, Japanese} % Skills
+  \cvskill
+    {Tools} % Category
+    {Git, Jira, Vim, Idea, Goland} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
