--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -30,6 +30,8 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN via an open-source project called TonY.}
         \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their own notebook instances via RESTful APIs.}
+        \item {Deployed Traefik ingress controller on K8s cluster to manage external access to the services in Submarine.}
+-       \item {Analyzed the demand of data scientists on Machine Learning pipelines.}
       \end{cvitems}
     }
 %---------------------------------------------------------
