--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed RESTful APIs integrated with Google Reseller API (google-api-go-client) to resell Google Workspace.}
-        \item {Working on transfering telemetry from an environmental management system (written in Java) to Azure Event Hubs.}
+        \item {Working on transferring telemetry from an environmental management system (written in Java) to Azure Event Hubs.}
         \item {Working on introducing an IT automation tool (Ansible) to reduce repetitive tasks for operations team.}
       \end{cvitems}
     }
