--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -11,13 +11,13 @@
 
 %---------------------------------------------------------
   \cvskill
-    {DevOps} % Category
-    {Github, Docker, Kubernetes, Helm, Argo, Vagrant, Ansible} % Skills
+    {Languages} % Category
+    {Java, Go, JavaScript, PHP} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Back-end} % Category
-    {Jersery, MyBatis, Spring boot, RESTful API, RDBMS} % Skills
+    {Spring Boot, Jersey, MyBatis, REST API} % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -26,13 +26,22 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Java, Go, SQL, JavaScript, PHP} % Skills
+    {Databases} % Category
+    {MySQL, MS SQL server, Redis, MinIO} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Tools} % Category
-    {Git, Jira, Vim, Idea, Goland} % Skills
+    {SDLC} % Category
+    {Git, JUnit, Ginkgo, Maven, Argo, Helm, Ansible, Jira} % Skills
 
+%---------------------------------------------------------
+  \cvskill
+    {Virtualization} % Category
+    {Docker, Kubernetes} % Skill
+
+%---------------------------------------------------------
+  \cvskill
+    {Cloud} % Category
+    {AWS (EC2, S3), Azure (Event Hubs)} % Skills
 %---------------------------------------------------------
 \end{cvskills}
