--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -17,9 +17,9 @@
     {Sept. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed RESTful APIs integrated with Google Reseller API (google-api-go-client) to resell Google Workspace.}
-        \item {Working on transferring telemetry from an environmental management system (written in Java) to Azure Event Hubs.}
-        \item {Working on introducing an IT automation tool (Ansible) to reduce repetitive tasks for operations team.}
+      \item {Designed RESTful APIs integrated with Google Reseller API (google-api-go-client) to resell Google Workspace. [Go, Google APIs]}
+      \item {Working on producing telemetry data and sending events to Azure Event Hubs. [Java (Spring boot), Azure]}
+      \item {Working on developing a containerized backend service to record cables and patch panels. [Python (FastAPI), MySQL, Docker compose]}
       \end{cvitems}
     }
 %---------------------------------------------------------
