--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -18,7 +18,8 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Distributed System Lab, Thesis advisor: Prof. Hung-Chang Hsiao, GPA: 3.88/4.0}
-        \item {Thesis title: Enabling Artifact Storage in Machine Learning Pipelines to Boot System-Wide Performance: The Case of Apache Submarine}
+        \item {Thesis title: Enabling Artifact Storage in Machine Learning Pipelines to Boot \\
+		System-Wide Performance: The Case of Apache Submarine}
       \end{cvitems}
     }
 
