--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -17,9 +17,9 @@
     {Sept. 2021 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Designed RESTful APIs integrated with Google Reseller API (google-api-go-client) to resell Google Workspace. [Go, Google APIs]}
-      \item {Working on producing telemetry data and sending events to Azure Event Hubs. [Java (Spring boot), Azure]}
-      \item {Working on developing a containerized backend service to record cables and patch panels. [Python (FastAPI), MySQL, Docker compose]}
+      \item {Designed REST APIs integrated with Google third-party APIs to resell Google Workspace. [Go, Google APIs]}
+      \item {Working on processing telemetry data and sending events to Azure Event Hubs. [Java (Spring boot), Azure, Multithreading]}
+      \item {Working on developing a containerized backend service including REST API and DB schema design to manage devices, cables and patch panels. [Python (FastAPI), MySQL, Docker]}
       \end{cvitems}
     }
 %---------------------------------------------------------
@@ -30,9 +30,9 @@
     {Jun. 2018 - Oct. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed an online store platform using PHP MVC framework (Yii), Vanilla JS, jQuery and Bootstrap.}
-        \item {Implemented factory method pattern for creating widgets which rendering inconcrete view objects.}
-        \item {Designed database schema (MariaDB) and RESTful APIs.}
+        \item {Mainly responsible for developing backend services for a platform which allows users to build an online store with ease.}
+	\item {Implemented factory method pattern for creating widgets which rendering inconcrete view objects. [HTML, JavaScript, Bootstrap]}
+	\item {Designed database schema and REST APIs for content management module. [PHP (yii), MariaDB]}
       \end{cvitems}
     }
 
@@ -44,10 +44,9 @@
     {Jul. 2016 - May. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a matchmaking web application using PHP, Vanilla JS, jQuery and Bootstrap.}
-        \item {Integrated E.SUN BANK cash management service (e-Collection) to receive payments.}
-        \item {Integrated Google Calendar, URL shorten API and Facebook Graph API for activity sign-up and member registration.}
-        \item {Migrated codebase from Yii PHP framework to pure PHP.}
+        \item {Developed a matchmaking web application and implemented Gale–Shapley algorithm to resolve Stable Marriage Problem.}
+        \item {Implemented the online payment service with E.SUN BANK cash management service (e-Collection) to receive payments.}
+	\item {Integrated Google Calendar, URL shorten APIs for activity sign-up and Facebook Graph API for member registration.}
       \end{cvitems}
     }
 
