--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -28,10 +28,10 @@
     {Oct. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN via an open-source project called TonY.}
-        \item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their own notebook instances via RESTful APIs.}
-        \item {Deployed Traefik ingress controller on K8s cluster to manage external access to the services in Submarine.}
--       \item {Analyzed the demand of data scientists on Machine Learning pipelines.}
+        \item {Enabled Submarine to run distributed MXNet jobs on Hadoop YARN via an open-source project called TonY. [Java, Hadoop]}
+	\item {Integrated Jupyter notebook into Submarine on K8s and enabled users to manage their own notebook instances via REST APIs. [Jersey, Jupyter Notebook, Helm, K8s, MySQL]}
+	\item {Deployed Traefik ingress controller on K8s cluster to manage external access to the services in Submarine. [K8s, Traefik, Helm]}
+	\item {Analyzed the demand of data scientists on Machine Learning pipelines. [Airflow, Argo workflow, MinIO]}
       \end{cvitems}
     }
 %---------------------------------------------------------
