--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,36 +12,42 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Java, Go, JavaScript, PHP} % Skills
+    {Java, Go, Python, JavaScript} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Back-end} % Category
-    {Spring Boot, Jersey, MyBatis, REST API} % Skills
+    {Back-End} % Category
+    {Spring Boot, Jersey, MyBatis, Traefik, FastAPI, SQLalchemy, REST API and DB schema design} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Front-end} % Category
+    {Front-End} % Category
     {HTML5, jQuery, AJAX, Bootstrap} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Databases} % Category
+    {Data Storage} % Category
     {MySQL, MS SQL server, Redis, MinIO} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {SDLC} % Category
-    {Git, JUnit, Ginkgo, Maven, Argo, Helm, Ansible, Jira} % Skills
+    {Github, Shell scripts, JUnit, Ginkgo, Maven, Argo workflow, Helm, Ansible, Jira} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Public Cloud} % Category
+    {AWS (EC2, S3), Azure} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Resource Mgt.} % Category
+    {Kubernetes, Hadoop YARN}
 
 %---------------------------------------------------------
   \cvskill
     {Virtualization} % Category
-    {Docker, Kubernetes} % Skill
+    {Docker} % Skill
 
-%---------------------------------------------------------
-  \cvskill
-    {Cloud} % Category
-    {AWS (EC2, S3), Azure (Event Hubs)} % Skills
 %---------------------------------------------------------
 \end{cvskills}
