--- a/examples/cv/summary.tex
+++ b/examples/cv/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current software engineer at Chunghwa Telecom and committer at Apache Software Foundation. Have 3+ years experience specializing in web development and open-source technology. I love learning something new and keen on contributing to open-source softwares. Interested in Big Data, Distributed Systems, Machine Learning and MLOps. Right now, I am learning about Java (Spring), Go, docker, Kubernetes ecosystem and ML systems.
+Current software engineer at Chunghwa Telecom and committer at Apache Software Foundation. Have 3+ years experience specializing in web development and open-source technology. I love learning something new and keen on contributing to open-source softwares. Interested in Big Data, Distributed Systems, Machine Learning and MLOps. Right now, I am learning about Java (Spring), Go, public cloud service (Azure), Docker, Kubernetes ecosystem and ML systems.
 \end{cvparagraph}
